--- a/src/views/nav-button.css
+++ b/src/views/nav-button.css
@@ -23,5 +23,5 @@
 }
 
 .discovery[data-darkmode] .view-nav-button {
-    color: #ccc;
+    color: var(--discovery-color);
 }
