--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -1,9 +1,15 @@
-/* isolate-style-root: discovery */
+/* isolate-style-root: discovery, discovery-root */
 .discovery {
     display: flex;
+}
+
+.discovery-root {
+    all: reset;
+
     font-family: Tahoma, Verdana, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.6;
+
     background-color: var(--discovery-background-color, white);
     color: var(--discovery-color, black);
     transition-property: background-color, color;
@@ -33,12 +39,12 @@
     --discovery-fmt-string-highlight-color: rgba(35, 165, 25, 0.1);
     --discovery-fmt-comment-color: #75787b;
 }
-.discovery[data-darkmode] {
+.discovery-root[data-darkmode] {
     --discovery-background-color: #242424;
     --discovery-color: #cccccc;
     --discovery-link-color: #1c87d4;
     --discovery-link-underline-color: rgb(37, 146, 226, 50%);
-    --discovery-link-hover-color: #0099dd;
+    --discovery-link-hover-color: #4aa6e8;
     --discovery-input-bg-color: #343434;
     --discovery-input-color: #e8e8e8;
     --discovery-button-color: #cccccc;
@@ -137,9 +143,18 @@
     position: absolute;
     top: 0;
     right: 40px;
-    border-radius: 0 0 5px 5px;
-    overflow: hidden;
     user-select: none;
+}
+.discovery-content-badges :first-child {
+    border-bottom-left-radius: 5px;
+    transition: border-radius .25s ease-in-out;
+}
+.discovery-content-badges :last-child {
+    border-bottom-right-radius: 5px;
+    transition: border-radius .25s ease-in-out;
+}
+.discovery-content-badges .view-nav-button.discovery-view-popup-active {
+    border-radius: 0;
 }
 .discovery-content-badges .view-nav-button[data-name="burger"] {
     background-image: url(hamburger-menu.svg);
